<resources>
    <string name="app_name">Drive4U</string>
    <string name="app_name_logo">Drive4U\ </string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="click_here_to_create_a_new_account">Click here to create a new account</string>
    <string name="wrong_user_name_or_password">Wrong user name or password</string>
    <string name="registration_name">Full name</string>
    <string name="registration_phone">Phone number</string>
    <string name="registration_Email">Email address</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_repeat">Password again</string>
    <string name="regFormButtonText">Sign up</string>
    <string name="user_type_choice_header">Registration type</string>
    <string name="user_type_choice_student">I am a student</string>
    <string name="user_type_choice_teacher">I am a teacher</string>
    <string name="user_email">User Email</string>
    <string name="search_a_student">Search a student</string>
    <string name="student_registration_title">Student Registration</string>
    <string name="teacher_registration_title">Teacher Registration</string>
    <string name="empty" />
    <string name="empty_email">Please enter email</string>
    <string name="empty_password">Please enter password</string>
    <string name="user_home_activity">userHomeActivity</string>
    <string name="teacher">teacher</string>
    <string name="student">student</string>
    <string name="signup">signUp</string>
    <string name="schedule_a_lesson">Schedule lesson</string>
    <string name="search_teacher">Search teacher</string>
    <string name="profile">Profile</string>
    <string name="recent_activities">Recent activities</string>
    <string name="show_progress">Show progress</string>
    <string name="logout">Logout</string>
    <string name="teacher_picture">teacher picture</string>
    <string name="student_choose_teacher">student choose teacher</string>
    <string name="number_of_students">Number of students: %1$d</string>
    <string name="schedule">Schedule</string>
    <string name="students_requests">Students requests</string>
    <string name="budget_management">Budget management</string>
    <string name="home">Home</string>
    <string name="my_students">My students</string>
    <string name="lessons_completed">Lessons completed:</string>
    <string name="balance">Balance:</string>
    <string name="select_date">Select Specific Date</string>
    <string name="starting_location">Starting location: </string>
    <string name="ending_location">Ending location: </string>
    <string name="set_starting_location">Set starting location</string>
    <string name="set_ending_location">set ending location</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="updateAll">Update All</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_city">City</string>
    <string name="registration_car_model">Car model</string>
    <string name="registration_gear_type">Gear type</string>
    <string name="lesson_ending_time">Lesson ending time</string>
    <string name="lesson_starting_time">Lesson starting time</string>
    <string name="lesson_date">Lesson date</string>
    <string name="lessons_remaining_today">Lessons remaining today:</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_by">Sort By:</string>
    <string name="filter_by">Filter By:</string>
    <string name="filter_sort_empty_error">no filter or sort values were inserted</string>
    <string name="apply">apply</string>
    <string name="all">all</string>
    <string name="student_search_teacher_students_number">number of students</string>
    <string name="student_search_teacher_city">city</string>
    <string name="student_search_teacher_lesson_length">lesson length</string>
    <string name="student_search_teacher_price">price</string>
    <string name="student_search_teacher_worth">worth</string>
    <string name="student_search_teacher_gear_type">gear type</string>
    <string-array name="gear_types_teacher">
        <item>manual</item>
        <item>automatic</item>
        <item>both</item>
    </string-array>
    <string-array name="gear_types_student">
        <item>manual</item>
        <item>automatic</item>
    </string-array>
    <string-array name="student_search_teacher_filter_categories">
        <item>@string/all</item>
        <item>@string/student_search_teacher_gear_type</item>
        <item>@string/student_search_teacher_students_number</item>
        <item>@string/student_search_teacher_city</item>
    </string-array>
    <string-array name="student_search_teacher_sort_categories">
        <item>@string/all</item>
        <item>@string/student_search_teacher_students_number</item>
        <item>@string/student_search_teacher_city</item>
        <item>@string/student_search_teacher_lesson_length</item>
        <item>@string/student_search_teacher_price</item>
        <item>@string/student_search_teacher_worth</item>
    </string-array>
    <string name="name">name</string>
    <string-array name="teacher_connection_requests_sort_categories">
        <item>@string/all</item>
        <item>@string/name</item>
    </string-array>
    <string-array name="teacher_connection_requests_filter_categories">
        <item>@string/all</item>
        <item>@string/city</item>
    </string-array>
    <string name="you_have_no_lessons">You have no lessons.</string>
    <string name="you_had_no_lessons_yet">You had no lessons yet.</string>
    <string name="optional_lessons">Optional lessons</string>
    <string name="request_sent">Your request sent to your teacher</string>
    <string name="already_schedule_this_hour">You send request for this hour already!</string>
    <string name="selected_hour">Selected hour: </string>
    <string name="selected_date">Selected date: </string>
    <string name="number_of_lessons">number of lessons: </string>
    <string name="finish">finish</string>
    <string name="alert_dialog_request_lesson_title">lesson confirmation</string>
    <string name="alert_dialog_request_lesson_message">Confirm that lesson?</string>
    <string name="update_or_delete_message">Update or cancel lesson?</string>
    <string name="confirm_lesson">Confirm</string>
    <string name="reject_lesson">Reject</string>
    <string name="cancel_lesson">Cancel</string>
    <string name="cant_approve_more_than_one_request">Can not approve more than one lesson for the same hour!</string>
    <string name="teacher_title">Teacher:</string>
    <string name="student_title">Student:</string>
    <string name="name_title">Name:</string>
    <string name="total_expense">Total Expense:</string>
    <string name="number_of_lessons_title">Number of Lessons:</string>
    <string name="phone_number_title">Phone number:</string>
    <string name="email_title">Email:</string>
    <string name="city_title">City:</string>
    <string name="balance_title">Balance:</string>
    <string name="cat_model_title">Car Model:</string>
    <string name="gear_type_title">Gear Type:</string>
    <string name="price_per_lesson_title">Price Per Lesson:</string>
    <string name="total_payed_title">Total Paid:</string>
    <string name="update_lesson_request">Update lesson request</string>
    <string name="student_name">Student name</string>
    <string name="time_picker">pick time</string>
    <string name="date_picker">change date</string>
    <string name="full_hour">Select only full hours!</string>
    <string name="illegal_hour">Select only hours between 07:00 to 20:00!</string>
    <string name="select_hour">Select hour</string>
    <string name="lessons_archive_activity_header">Lessons archive</string>
    <string name="wait_for_student_response">Wait for student response</string>
    <string name="wait_for_teacher_response">Wait for student response</string>
    <string name="hour_is_taken">That hour is taken</string>
    <string name="teacher_update_lesson_to_hour">Your teacher updated the lesson time to that hour, waiting for your response !</string>
    <string name="update_lesson_to_hour">You updated the lesson time to that hour</string>
    <string name="remove_from_home_page_message">That lesson have been canceled by your teacher, remove it?</string>
    <string name="remove_from_home_page">Remove Lesson</string>
    <string name="lesson_deleted">The lesson deleted</string>
    <string name="lesson_did_not_deleted">The lesson did not delete, you could delete it later</string>
    <string name="no_teachers_found">No teachers found.</string>
    <string name="search_a_teacher">Search a teacher</string>
    <string name="lesson_canceled_message">The lesson canceled</string>
    <string name="switch_right_for_student"><![CDATA[<<< I am a student <<<]]></string>
    <string name="switch_left_for_teacher"><![CDATA[>>> I am a teacher >>>]]></string>
    <string name="signup_failed">SignUp Failed</string>
    <string name="name_error">Please enter valid full name</string>
    <string name="phone_error">Please enter valid phone number</string>
    <string name="email_error">Please enter valid email</string>
    <string name="passward_empty">please enter a password</string>
    <string name="password_len_error">Password must contain at least 6 characters</string>
    <string name="passwords_diff">passwords are different</string>
    <string name="car_model_error">Please enter car model</string>
    <string name="please_enter_price">Please enter price</string>
    <string name="lesson_length">LessonLength</string>
    <string name="price">Price</string>
    <string name="lesson_len_error">Please enter valid lesson length</string>
    <string name="city_error">Please enter valid city name</string>
    <string name="title_activity_main">TeacherMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="nav_students">Studnets</string>
    <string name="title_activity_tmp_main">tmpMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="title_chats">Chats</string>
    <string name="title_users">users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="nav_teachers">Teachers</string>
    <string name="type_a_message">Type a message</string>
    <string name="choose_teacher_dialog_title">connection request</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="choose_teacher_dialog_message_no_teacher">Are you sure you want to send a connection request?</string>
    <string name="choose_teacher_dialog_message_has_teacher">Already has a teacher, disconnect first.</string>
    <string name="dialog_ok">OK</string>
    <string name="lessons_archive">Lessons archive</string>
    <string name="connection_requests">Connection requests</string>
    <string name="communicate_title">Communicate</string>
</resources>