<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/teacher_nav_home"
            android:icon="@mipmap/ic_home_foreground"
            android:title="@string/home" />
        <item
            android:id="@+id/teacher_nav_students"
            android:icon="@mipmap/ic_school_foreground"
            android:title="@string/nav_students" />
        <item
            android:id="@+id/teacher_nav_connection_requests"
            android:icon="@mipmap/ic_new_user_foreground"
            android:title="@string/connection_requests" />
        <item
            android:id="@+id/teacher_nav_schedule"
            android:icon="@mipmap/ic_calander_foreground"
            android:title="@string/schedule" />
        <item
            android:id="@+id/teacher_nav_profile"
            android:icon="@mipmap/ic_user_foreground"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/communicate_title">
        <menu>
            <item
                android:id="@+id/teacher_nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_chat" />
        </menu>
    </item>

</menu>
