<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/student_nav_home"
            android:icon="@drawable/icons8_home_page_24"
            android:title="@string/home" />

        <item
            android:id="@+id/student_nav_schedule"
            android:icon="@drawable/icons8_calendar_filled_24"
            android:title="@string/schedule" />

        <item
            android:id="@+id/student_nav_lessons_archive"
            android:icon="@drawable/icons8_user_24_profile"
            android:title="@string/lessons_archive" />

        <item
            android:id="@+id/student_nav_teachers"
            android:icon="@drawable/icons_contacts"
            android:title="@string/nav_teachers" />

        <item
            android:id="@+id/student_nav_profile"
            android:icon="@drawable/icons8_user_24_profile"
            android:title="@string/profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/student_nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Chat" />
        </menu>
    </item>

</menu>
