<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_lesson_request"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_date"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/lesson_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp" />
        <Button
            android:id="@+id/date_picker"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/date_picker"
            android:textSize="10dp"
            android:gravity="end"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorButtonText"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/starting_time_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_starting_time"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <Spinner
            android:spinnerMode="dialog"
            android:id="@+id/hoursSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/starting_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/starting_location"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/setStartingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:text="@string/set_starting_location"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/ending_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            android:text="@string/ending_location" />

        <TextView
            android:id="@+id/setEndingLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:textSize="12sp"
            android:text="@string/set_ending_location" />
    </LinearLayout>

    <Button
        android:id="@+id/update_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorButtonText"/>



</LinearLayout>
