<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StudentRegistrationActivity">

    <TextView
        android:id="@+id/textViewRegistrationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/student_registration_header"
        android:textSize="@dimen/main_headers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegistrationFirstName"
        style="@style/editTextRegFormField"
        android:inputType="text"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:hint="@string/registration_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrationHeader" />

    <EditText
        android:id="@+id/editTextRegistrationLastName"
        style="@style/editTextRegFormField"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:hint="@string/registration_last_name"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/editTextRegistrationFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrationHeader" />

    <EditText
        android:id="@+id/editTextRegistrationPhone"
        style="@style/editTextRegFormField"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/registration_phone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationFirstName" />

    <EditText
        android:id="@+id/editTextRegistrationCity"
        style="@style/editTextRegFormField"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:hint="@string/registration_city"
        app:layout_constraintStart_toEndOf="@+id/editTextRegistrationPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationLastName" />

    <EditText
        android:id="@+id/editTextRegistrationEmail"
        style="@style/editTextRegFormField"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/registration_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationPhone" />

    <EditText
        android:id="@+id/editTextRegistrationPassword"
        style="@style/editTextRegFormField"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:hint="@string/registration_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextRegistrationEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationCity" />

    <Button
        android:id="@+id/button"
        style="@style/ButtonUserTypeChoice"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/signup"
        android:onClick="signUp"/>

</android.support.constraint.ConstraintLayout>