<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserTypeChoiceActivity"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textViewUserChoiceTypeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_type_choice_header"
        android:textSize="@dimen/main_headers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/switch_student"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="300dp"
        android:text="@string/switch_right_for_student"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserChoiceTypeHeader" />
    <TextView
        android:id="@+id/switch_teacher"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/switch_left_for_teacher"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_student" />

</android.support.constraint.ConstraintLayout>